fixing the gap between y-axis

--- a/src/components/experiment-tracking/parallel-coordinates/parallel-coordinates.scss
+++ b/src/components/experiment-tracking/parallel-coordinates/parallel-coordinates.scss
@@ -3,7 +3,7 @@
 $baseColour: #{colors.$grey-900};
 $highlightColour: #{colors.$white-0};
 
-.parallelCoordinates {
+.parallel-coordinates {
   margin: 0 4em 0 0;
   font-family: sans-serif;
 }
